--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,27 @@
-Django>=5.2
-gunicorn
-dj-database-url
-whitenoise
-psycopg2-binary
-python-dotenv
-django-ckeditor-5
+asgiref==3.8.1
+click==8.2.1
+colorama==0.4.6
+cssbeautifier==1.15.4
+dj-database-url==3.0.0
+Django==5.0.1
+django-ckeditor==6.7.3
+django-ckeditor-5==0.2.18
+django-js-asset==3.1.2
+djlint==1.36.4
+EditorConfig==0.17.1
+gunicorn==23.0.0
+jsbeautifier==1.15.4
+json5==0.12.0
+mysqlclient==2.2.7
+packaging==25.0
+pathspec==0.12.1
+pillow==11.1.0
+psycopg2-binary==2.9.10
+PyYAML==6.0.2
+regex==2024.11.6
+six==1.17.0
+sqlparse==0.5.3
+tqdm==4.67.1
+typing_extensions==4.14.0
+tzdata==2025.2
+whitenoise==6.9.0
